Import of DRUOSO/Catalyst-Controller-SOAP-0.6.tar.gz from CPAN.
gitpan-cpan-distribution: Catalyst-Controller-SOAP
gitpan-cpan-version:      0.6
gitpan-cpan-path:         DRUOSO/Catalyst-Controller-SOAP-0.6.tar.gz
gitpan-cpan-author:       DRUOSO
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -103,6 +103,7 @@ SEE ALSO
 
 AUTHORS
     Daniel Ruoso "daniel.ruoso@verticalone.pt"
+    Drew Taylor "drew@drewtaylor.com"
 
 BUG REPORTS
     Please submit all bugs regarding "Catalyst::Controller::SOAP" to
