--- a/README
+++ b/README
@@ -102,7 +102,7 @@ SEE ALSO
     Catalyst::Action::SOAP::RPCEncoded, Catalyst::Action::SOAP::HTTPGet
 
 AUTHORS
-    Daniel Ruoso "daniel.ruoso@verticalone.pt"
+    Daniel Ruoso "daniel@ruoso.com"
     Drew Taylor "drew@drewtaylor.com"
 
 BUG REPORTS
